// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test - e2e > setUpRequestAnimationFrameMock > Should render html 1`] = `0`;

exports[`test - e2e > setupMutationObserverMock > Should render html 1`] = `
MockMutationObserver {
  "cb": {},
  "disconnect": undefined,
  "observe": undefined,
  "takeRecords": undefined,
}
`;

exports[`test - e2e > setupMutationObserverMock > Should render html 2`] = `
MockMutationObserver {
  "cb": {
    "disconnect": [MockFunction spy],
    "observe": [Function],
    "takeRecords": [Function],
  },
  "disconnect": [MockFunction spy],
  "observe": [Function],
  "takeRecords": [Function],
}
`;

exports[`test - e2e > setupResizeObserverMock > Should render html 1`] = `
MockResizeObserver {
  "cb": {},
  "disconnect": undefined,
  "observe": undefined,
  "unobserve": undefined,
}
`;

exports[`test - e2e > setupResizeObserverMock > Should render html 2`] = `
MockResizeObserver {
  "cb": {
    "disconnect": [MockFunction spy],
    "observe": [Function],
    "unobserve": [Function],
  },
  "disconnect": [MockFunction spy],
  "observe": [Function],
  "unobserve": undefined,
}
`;

exports[`test - e2e > setupSubmitEventMock > Should render html 1`] = `
SubmitEvent {
  "detail": undefined,
  "isTrusted": false,
}
`;
